# CS3704-Canvas-Project

./: .all-contributorsrc  .coderabbit.yaml  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint.yml  ALLOWLIST  AUDIT-CYCLE-PROTOCOL.md  BREAKING.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING-DATA.md  CONTRIBUTING.md  CONTRIBUTORS.md  CYCLES.md  DATASET_README.md  Dockerfile  IMPLEMENTATION.md  ISSUES.md  LICENSE  LICENSING.md  MAINTAINERS.md  MANIFEST.in  Makefile  PLAN-V2.md  PLAN.md  README.md  REVIEW-demo-extension-share.md  REVIEW-extension-sdk.md  REVIEWS.md  ROADMAP.md  SECURITY.md  canvas-tui.py  e2e-test.mjs  mkdocs.yml  package-lock.json  (+6 more)
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
.github/workflows/: ai-fixup.yml  all-contributors.yml  auto-assign.yml  auto-docs.yml  auto-merge.yml  branch-policy.yml  ci.yml  cleanup.yml  coverage.yml  dataset-validation.yml  dependabot-auto-merge.yml  dependabot-branch-updater.yml  deploy-hf-space.yml  deploy-pii-space.yml  docker.yml  labeler.yml  nightly.yml  pages.yml  pr-quality.yml  quick-checks.yml  release-drafter.yml  release.yml  repo-org.yml  scorecard-gate.yml  scorecard.yml  security.yml  stale.yml  version-check.yml  wiki-sync.yml
.planning/: PROJECT.md  SESSION_HANDOFF.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
GemmaReranker/: README.md
GemmaReranker/configs/: student.slot.env  teacher.slot.env  teammate.env.example
GemmaReranker/data/: .gitignore  manifest.example.txt  rerank_sft_train_sample.jsonl  rerank_test_sample.jsonl  rerank_train_sample.jsonl
GemmaReranker/docker/: compose.student.yaml  compose.teacher.yaml  compose.trainer.yaml
GemmaReranker/docs/: ARCHITECTURE.md  SPARK.md
GemmaReranker/scripts/: audit_dataset.py  batch_generate.py  bench_v4_methods.py  benchmark.py  benchmark_quants.py  callbacks.py  collect_rerank_dataset.py  collect_trajectories.py  convert_to_pipeline.py  data_utils.py  deposit_zenodo.py  export_gguf.py  extract_text_base.py  generate_dataset.py  generate_rerank_data.py  generate_teacher_preferences.py  latency_bench.py  path_b_tui.py  prep_dataset_release.py  publish_v4_models.py  run_benchmark.py  scrub.py  scrub_names.py  smoke_test_gguf.py  split_dpo_holdout.py  train_dpo.py  train_dpo_v3.py  train_v4_matrix.py  validate_dpo.py  validate_dpo_holdout.py
data/: rerank_train.jsonl
data/collab/: Williammm23.jsonl
data/trajectories/: README.md
data/v1-reranker/: rerank_train_augmented.jsonl
docker/canvas-tui/: Dockerfile
docs/: CS3704-PM3-REVIEW.md  EXTENSION_ROADMAP.md  NEXT-STEPS.md  QUICKSTART.md  RELEASING.md  TEAM_ONBOARDING.md  contributing-data.md  release-process.md  tui-architecture.md
docs-site/: CLAIMS-AUDIT.md  agent-demo.md  architecture.md  chrome_shim_prod.js  extension.md  fetch_canvas_data.py  index.html  index.md  mkdocs.yml  pm3-review.md  release-checklist.md  requirements.txt  roadmap.html  roadmap.md  workflow.md
docs-site/agent-demo/: index.html  method.html
examples/: contribute-data.sh  quickstart-extension.md  quickstart-sdk.py  quickstart-tui.sh
extension/: .crxignore  jest.config.cjs  manifest.json  package-lock.json  package.json
hf-space/: README.md  UPGRADE-GAP-AUDIT.md  app.py  requirements.txt
hf-space-pii/: Dockerfile  README.md  app.py  requirements.txt
proxy/: README.md  deploy-curl.sh  iframe-fallback.html  worker.js  wrangler.toml
reranker/: README.md
scripts/: README.md  benchmark.py  canvas.conf.example  collect_rerank_dataset.py  collect_trajectories.py  convert_canvas_contributions.py  demo_agent.py  export_gguf.py  finetune_reranker.py  gen_rerank.py  generate_rerank_data.py  generate_teacher_preferences.py  nemotron-docs.py  nemotron-fixup.py  path_b_tui.py  run_pipeline.py  run_tests.py  share_my_canvas.py  train_gemma2b.py
sdk/: README.md  pyproject.toml
src/sdk/: README.md  pyproject.toml
src/sdk/canvas_sdk/: __init__.py  agent.py  assignment.py  avatar.py  blueprint.py  calendar_event.py  canvas.py  canvas_object.py  client.py  communication_channel.py  content_export.py  conversation.py  course.py  current_user.py  discussion_topic.py  entities.py  eportfolio.py  exceptions.py  external_feed.py  external_tool.py  favorite.py  feature.py  folder.py  grading_period.py  grading_standard.py  group.py  jwt.py  license.py  lti_resource_link.py  model_loader.py  module.py  new_quiz.py  notification_preference.py  outcome_import.py  peer_review.py  planner.py  poll.py  quiz.py  quiz_group.py  requester.py  (+11 more)
src/sdk/canvas_sdk/agent_tools/: __init__.py  calendar_tools.py  canvas_tools.py  reranker_tools.py  study_tools.py
src/sdk/canvas_sdk/agent_tools/tests/: conftest.py  test_calendar_adapter_nop.py  test_canvas_tools_schemas.py  test_registry.py  test_study_tools.py
src/sdk/canvas_sdk/backends/: calendar_adapter.py  gemini_backend.py  gemma4_backend.py
src/sdk/canvas_sdk/host/: __main__.py  install.py  manifest.json
src/sdk/canvas_sdk/host/tests/: test_host.py
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_charts.py  test_cli.py  test_config.py  test_config_env.py  test_convert_contributions.py  test_courses.py  test_dashboard.py  test_deadline.py  test_filtering.py  test_gemini_backend.py  test_grades.py  test_hf_space_integration.py  test_ics.py  test_logo.py  test_models.py  test_normalize.py  test_notifications.py  test_pii_scrub.py  test_pii_space_app.py  test_pii_space_client.py  test_pipeline.py  test_plots.py  test_reranker.py  test_share_my_canvas.py  test_state.py  test_theme.py  test_utils.py  test_validate_collab_jsonl.py
tools/: check-readme-claims.py  check-repo-org.sh  check-smell-markers.sh  clean.sh  newsfragment_template.md.j2  smoke_pii_space.sh  validate_collab_jsonl.py
(+213 files in other folders)
