[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-tui"
version = "1.1.0"
description = "Canvas LMS TUI client for the CS3704 Canvas project"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "CS3704 Team", email = "team@example.com" }
]
keywords = ["canvas", "tui", "textual", "education", "cs3704"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28",
    "urllib3>=2.0",
    "textual>=0.40",
]

[project.optional-dependencies]
keyring = ["keyring>=23.0"]
ai = [
    # On-device GGUF inference for canvas_tui.reranker.LocalReranker.
    # Pull a quant from huggingface.co/kleinpanic93/gemma4-canvas-reranker
    # (Q4_K_M ~3.2 GiB recommended for resource-constrained machines;
    # Q5_K_M ~3.4 GiB is the published default).
    "llama-cpp-python>=0.3",
]
dev = [
    "black",
    "build",
    "mkdocs",
    "mkdocs-material",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    "types-requests",
]

[project.scripts]
canvas-tui = "canvas_tui.app:main"

[project.urls]
Homepage = "https://github.com/kleinpanic/CS3704-Canvas-Project"
Documentation = "https://kleinpanic.github.io/CS3704-Canvas-Project/"
Issues = "https://github.com/kleinpanic/CS3704-Canvas-Project/issues"
Repository = "https://github.com/kleinpanic/CS3704-Canvas-Project"

[tool.setuptools.packages.find]
where = ["src"]
