[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-tui"
version = "1.2.2"
description = "Canvas LMS TUI client for the CS3704 Canvas project"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "CS3704 Team", email = "team@example.com" }
]
keywords = ["canvas", "tui", "textual", "education", "cs3704"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28",
    "urllib3>=2.0",
    "textual>=0.40",
]

[project.optional-dependencies]
keyring = ["keyring>=23.0"]
ai = [
    # On-device GGUF inference for canvas_tui.reranker.LocalReranker.
    # Pull a quant from huggingface.co/kleinpanic93/gemma4-canvas-reranker
    # (Q4_K_M ~3.2 GiB recommended for resource-constrained machines;
    # Q5_K_M ~3.4 GiB is the published default).
    "llama-cpp-python>=0.3",
]
dev = [
    "black",
    "build",
    "gradio-client>=1.3",
    "mkdocs",
    "mkdocs-material",
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
    "types-requests",
]

[project.scripts]
canvas-tui = "canvas_tui.app:main"

[project.urls]
Homepage = "https://github.com/kleinpanic/CS3704-Canvas-Project"
Documentation = "https://kleinpanic.github.io/CS3704-Canvas-Project/"
Issues = "https://github.com/kleinpanic/CS3704-Canvas-Project/issues"
Repository = "https://github.com/kleinpanic/CS3704-Canvas-Project"

[tool.setuptools.packages.find]
where = ["src"]

[tool.towncrier]
name = "canvas-tui"
version = "1.2.2"
directory = "newsfragments"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/kleinpanic/CS3704-Canvas-Project/issues/{issue})"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.2.2"
tag_format = "v$version"
version_source = "commitizen"

[tool.pytest.ini_options]
addopts = "-m 'not network and not slow'"
markers = [
    "network: marks tests that require live network access (run explicitly with '-m network')",
    "slow: marks tests with long timeouts (run explicitly with '-m slow')",
]

[tool.coverage.run]
omit = [
    # Textual TUI layer — requires a running terminal; cannot execute in headless CI
    "src/canvas_tui/app.py",
    "src/canvas_tui/__main__.py",
    "src/canvas_tui/cli.py",
    "src/canvas_tui/screens/*",
    "src/canvas_tui/widgets/pomodoro.py",
    # Network/integration-dependent code not exercised by unit tests
    "src/canvas_tui/adapters/*",
    "src/canvas_tui/commands/*",
    "src/canvas_tui/prefetch.py",
    "src/canvas_tui/rmp/client.py",
    "src/canvas_tui/core/__init__.py",
    "src/canvas_tui/core/interfaces.py",
    "src/canvas_tui/models.py",
]

[tool.coverage.report]
fail_under = 80
