[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canvas-sdk"
version = "2.0.9"
description = "Pure-Python (stdlib only) Canvas LMS read-only client and agent SDK"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
gemini = ["google-generativeai>=0.8"]
autodownload = ["huggingface-hub>=0.20"]
all = [
    "google-generativeai>=0.8",
    "huggingface-hub>=0.20",
]
